--- a/Bitdozer.Lib.Core.Framework.Tests/Bitdozer.Lib.Core.Framework.Tests.csproj
+++ b/Bitdozer.Lib.Core.Framework.Tests/Bitdozer.Lib.Core.Framework.Tests.csproj
@@ -49,6 +49,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Bitdozer.Lib.Core.Tests\StringExtensionManualTests.cs">
+      <Link>StringExtensionManualTests.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
     <Compile Include="StringExtensionTest.BetweenFirstTest.g.cs">
