--- a/Bitdozer.Lib.Core.Framework.Tests/Bitdozer.Lib.Core.Framework.Tests.csproj
+++ b/Bitdozer.Lib.Core.Framework.Tests/Bitdozer.Lib.Core.Framework.Tests.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
+    <Compile Include="StringExtensionTest.AppendFormatLineTest.g.cs">
+      <DependentUpon>StringExtensionTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="StringExtensionTest.BetweenFirstTest.g.cs">
       <DependentUpon>StringExtensionTest.cs</DependentUpon>
     </Compile>
@@ -61,6 +64,9 @@
       <DependentUpon>StringExtensionTest.cs</DependentUpon>
     </Compile>
     <Compile Include="StringExtensionTest.ContainsCountTest.g.cs">
+      <DependentUpon>StringExtensionTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StringExtensionTest.ContainsTest.g.cs">
       <DependentUpon>StringExtensionTest.cs</DependentUpon>
     </Compile>
     <Compile Include="StringExtensionTest.cs" />
